--- a/loyeers/work.pug
+++ b/loyeers/work.pug
@@ -10,7 +10,7 @@ section.work.container
   .work__slider.swiper-container
     .swiper-wrapper
       each card in companies
-        .swiper-slide.work__slider_card
+        .work__slider_card.swiper-slide
           .work__slider_card-logo
             .work__slider_img
               img(src=card.logo)
